@@ -277,6 +277,9 @@ public class CreateGff4Gene {
         gff3Writer.close();
         RATMINEgff3Writer.close();
 
+        //System.out.println("starting sort ...");
+        gff3Writer.sortInMemory(info.isCompress());
+        //System.out.println("ending sort ...");
 
         dumpCounters(counters, assemblySymbol, msgBuf);
 
